Sun Nov 25 10:53:38 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec_usb.c, scripts/hal/20-ups-nut-device.fdi: Added
   Mustek Powermust as supported through 'megatec_usb' driver.

Mon Nov  5 20:21:45 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/nitram.c: Added experimental flag to this driver because it
   lacks support to shutdown the UPS.

Sun Nov  4 20:08:53 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/hidparser.c: Fix non-portable type conversions.

Fri Nov  2 06:48:57 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: merged all functionality of get_data_krauler
   to set_data_krauler thus removing most sources of code duplication
   in krauler subdriver.

Thu Oct 18 17:51:07 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/drivers.list: add Belkin F6H375-USB compatibility through
   megatec_usb (depending on vendorid)

Mon Oct 15 11:14:06 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - data/drivers.list: add Powerware 9110 compatibility through upscode2

Mon Oct 15 08:12:28 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - scripts/udev/nut-usbups.rules.in: Make udev rules compatible with
   newer kernels compiled without CONFIG_USB_DEVICE_CLASS.

Tue Oct  9 22:54:08 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 * drivers/megatec_usb.c:
   - moved the code from subdriver init function which actually does
     flushing buffers to ser_flush_io().
   - added subdriver 'flags' to export information about subdriver.

Wed Oct  3 00:01:09 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: added ability to do subdriver-specific
   initialization, and moved some shared code to agiler init function
   since krauler doesn't need it.

Mon Oct  1 07:49:31 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/snmp-ups.c:
   - Allow passing a value to an instcmd.
   - Be less verbose to the syslog when output is needed for debugging