@@ -1,3 +1,9 @@
+Sun Nov 25 11:44:58 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/megatec.c: Limit detection of UPS to minimum required number
+   of successful attempts. Flush input- and output buffers before sending
+   any command.
+
 Sun Nov 25 10:53:38 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/megatec_usb.c, scripts/hal/20-ups-nut-device.fdi: Added
